# prefixspan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
bindings/python/: CMakeLists.txt  bindings.cxx  prefixspan.cxx  pyproject.toml
bindings/python/src/: bindings.cxx
bindings/python/tests/: test_bindings.py
prefixspan/: CMakeLists.txt
prefixspan/bindings/python/: CMakeLists.txt
prefixspan/bindings/python/src/: bindings.cxx
prefixspan/bindings/python/src/prefixspan/: __init__.py
prefixspan/src/: graph.hxx  prefixspan.cxx  prefixspan.hxx  ref.hxx  test_prefixspan.cxx  tree.hxx  trie.hxx
prefixspan/tests/: test_prefixspan.cxx
tests/: test_prefixspan.cxx
