[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=1.3.2,<2"]
build-backend = "scikit_build_core.build"

[project]
name = "prefixspan"
version = "0.1.0"
description = "Simple prefixspan implementation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "bolu", email = "bolu@bolupi.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bolu61/prefixspan"
Documentation = "https://github.com/bolu61/prefixspan#readme"
Issues = "https://github.com/bolu61/prefixspan/issues"
Source = "https://github.com/bolu61/prefixspan"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["prefixspan/bindings/python/src/prefixspan"]
