[build-system]
requires = ["scikit-build-core", "nanobind", "cmake>=3.13", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "prefixspan"
version = "0.1.0"
description = "Bindings to a simple c++ prefixspan implementation."
requires-python = ">=3.11"
authors = [{ name = "bolu", email = "bolu@bolupi.me" }]
dependencies = ["numpy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/bolu61/prefixspan"
Documentation = "https://github.com/bolu61/prefixspan#readme"
Issues = "https://github.com/bolu61/prefixspan/issues"
Source = "https://github.com/bolu61/prefixspan"

[tool.scikit-build]
minimum-version = "0.10"
cmake.source-dir = "../.."
build.targets = ["prefixspan_python_ext", "prefixspan_python_ext_stub"]
cmake.define = { "BUILD_TESTING" = "OFF" }
